# dreamer4

./: README.md  pyproject.toml
.github/workflows/: test.yml
dreamer4/: __init__.py  dreamer4.py  trainers.py
tests/: test_dreamer.py
