[project]
name = "dreamer4"
version = "0.0.18"
description = "Dreamer 4"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformer',
    'attention mechanism',
    'model-based reinforcement learning',
    'world models'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "accelerate",
    "adam-atan2-pytorch>=0.2.2",
    "assoc-scan",
    "einx>=0.3.0",
    "einops>=0.8.1",
    "hl-gauss-pytorch",
    "hyper-connections>=0.2.1",
    "torch>=2.4",
    "torchvision",
    "x-mlps-pytorch>=0.0.29"
]

[project.urls]
Homepage = "https://pypi.org/project/dreamer4/"
Repository = "https://github.com/lucidrains/dreamer4"

[project.optional-dependencies]
examples = []
test = [
    "pytest",
    "pytest-shard"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dreamer4"]
